refatorando o projeto, e principalmente o modal

--- a/index.html
+++ b/index.html
@@ -130,27 +130,19 @@
           </div>
 
           <div class="modal" style="display: none">
-            <div class="modal-conteudo">
-              <!-- Coluna Esquerda -->
-              <div class="modal-esquerda">
-                <div class="modal-links">
-                  <a href="" class="modal-repositorio" target="_blank"
-                    >Repositório</a
-                  >
-                  <a href="" class="modal-site" target="_blank">Site</a>
-                  <a href="" class="modal-video" target="_blank">Video</a>
-                </div>
-              </div>
-
-              <!-- Coluna Direita -->
-              <div class="modal-direita">
-                <h2 class="modal-titulo"></h2>
-                <p class="modal-descricao"></p>
-                <p class="modal-data"></p>
-              </div>
+            <div class="modal-conteudo">         
+              <h2 class="modal-titulo"></h2>
+              <p class="modal-descricao"></p>
+              <p class="modal-data"></p>
+            <div class="modal-links">
+              <a href="" class="modal-repositorio" target="_blank">Repositório</a>
+              <a href="" class="modal-site" target="_blank">Site</a>
+              <a href="" class="modal-video" target="_blank">Video</a>
             </div>
+          </div>
             <button class="fechar"></button>
           </div>
+       
         </div>
       </div>
     </main>
