--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thales Varga</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/sobremim.css" />
-    <link rel="stylesheet" href="css/portfolioFotografia.css" />
-    <link rel="stylesheet" href="css/skills.css" />
-    <link rel="stylesheet" href="css/trabalhosRealizados.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/sobremim.css" />
+    <link rel="stylesheet" href="/css/portfolioFotografia.css" />
+    <link rel="stylesheet" href="/css/skills.css" />
+    <link rel="stylesheet" href="/css/trabalhosRealizados.css" />
+    <link rel="stylesheet" href="git s/css/footer.css" />
 
     <link rel="stylesheet" href="https://use.typekit.net/dnx5lfu.css" />
     <script src="/landingpage.js" defer type="module"></script>
