--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/portfolioFotografia.css" />
     <link rel="stylesheet" href="/css/skills.css" />
     <link rel="stylesheet" href="/css/trabalhosRealizados.css" />
-    <link rel="stylesheet" href="git s/css/footer.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
 
     <link rel="stylesheet" href="https://use.typekit.net/dnx5lfu.css" />
     <script src="/landingpage.js" defer type="module"></script>
