Atualizando melhorias no portfolio

--- a/index.html
+++ b/index.html
@@ -11,11 +11,24 @@
     <link rel="stylesheet" href="/css/skills.css" />
     <link rel="stylesheet" href="/css/trabalhosRealizados.css" />
     <link rel="stylesheet" href="/css/footer.css" />
+    <!-- <link rel="stylesheet" href="/css/entradaSite.css" /> -->
 
     <link rel="stylesheet" href="https://use.typekit.net/dnx5lfu.css" />
     <script src="/landingpage.js" defer type="module"></script>
   </head>
   <body data-tema="claro">
+    <!-- <div id="entrada-site" class="oculto conteudo-entrada">
+      <h1>
+        Thales Varga
+        <img
+          src="/assets/forma-circulo-laranja.svg"
+          alt="imagem geometrica forma-circulo"
+          class="header-imagem-circulo"
+        />
+      </h1>
+      <p>Portfólio</p>
+    </div> -->
+
     <img class="linha" src="/assets/linha.svg" alt="" />
     <header id="header">
       <div class="header-nome">
@@ -41,9 +54,9 @@
         </ul>
       </div>
       <div class="header-contato">
-        <a href="https://wa.me/5511967393632" target="_blank"
-          >Ei!Vamos conversar</a
-        >
+        <a href="https://wa.me/5511967393632" target="_blank">
+          <img src="/assets/whatsapp.svg" alt="whatsapp" />
+        </a>
       </div>
     </header>
     <main>
@@ -385,7 +398,11 @@
               >
             </div>
 
-            <img src="/assets/memoteca.svg" alt="" />
+            <img
+              class="card-imagem"
+              src="/assets/Door_digital.png"
+              alt="imagem do website da Door digital "
+            />
           </div>
         </div>
 
@@ -396,21 +413,20 @@
             <div class="card2-conteudo">
               <h3>LBC Corretora</h3>
               <p>
-                Criação e desenvolvimento do site, incluindo o design e a
-                estruturação da identidade visual para uma agência de eventos de
-                games e corporativos. O projeto foi centrado na experiência do
-                usuário e na comunicação eficaz da marca.
+                O projeto foi realizado para um Corretora de PLanos de Saúde, ha
+                mais de 14 anos de anos de trabalho.
               </p>
 
               <div class="card-descricao">
                 <h5>FUNCÃO</h5>
-                <p>Desenvolvedor, UI Designer e UX Analista.</p>
+                <p>Desenvolvedor, UX Designer e UX Researcher.</p>
                 <h5>PROCESSO</h5>
                 <p>
-                  Refatoração do site, aplicando conceitos de UI/UX para
-                  aprimorar a experiência do usuário e a interface. Otimização
-                  da usabilidade,com navegação mais intuitiva, com foco em
-                  acessibilidade e responsividade.
+                  O projeto envolveu a atualização da identidade visual e do
+                  design, além da otimização para SEO e da melhoria da
+                  experiência do usuário. Essas iniciativas revitalizam a
+                  presença digital da marca, promovendo uma interação mais
+                  envolvente e eficaz com o público.
                 </p>
               </div>
               <a class="card2-links card-links-site" href=""
@@ -418,7 +434,7 @@
               >
             </div>
 
-            <img src="/assets/memoteca.svg" alt="" />
+            <img src="/assets/LBC_Corretora.png" alt="" />
           </div>
         </div>
 
@@ -514,7 +530,11 @@
               href="https://wa.me/5511967393632"
               target="_blank"
               style="text-decoration: none; color: white"
-            >
+              ><img
+                class="footer-whats"
+                src="assets/whatsapp.svg"
+                alt="whatsapp"
+              />
               +55 11 96739-3632
             </a>
           </h2>
