--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
           <li data-section="#trabalhos">Trabalhos</li>
           <li data-section="#sobre-mim">Sobre mim</li>
           <li data-section="#footer">Contato</li>
-
-          <!-- <li>Skills</li>
-          <li>Projetos</li>
-          <li>Trabalhos</li> -->
         </ul>
       </div>
       <div class="header-contato">
@@ -262,24 +258,6 @@
                     utilizando React no front-end e um back-end próprio. O
                     objetivo foi praticar e consolidar minhas habilidades como
                     Desenvolvedor Full Stack.<br /><br />
-                    <!-- Front-end:<br />•React Hooks: useState e useEffect para
-                  gerenciamento de estado e efeitos colaterais.
-                  <br />•Manipulação de Tempo: setInterval para controle de
-                  reprodução. <br />•Manipulação de Áudio: useRef para interação
-                  com elementos de áudio. <br />•React Router: Navegação entre
-                  páginas.<br />•CSS: Estilização responsiva para melhor
-                  experiência do usuário.<br />
-                  •Vite: Configuração rápida do ambiente de desenvolvimento.<br />
-                  •Type Modules: Organização modular do código.<br />
-                  •Lógicas de map e filter: Manipulação e exibição de dados
-                  dinâmicos.<br /><br />
-                  Back-end:<br />•Node.js & Express: Servidor para gerenciar
-                  requisições. <br />•Middleware CORS: Permite requisições entre
-                  diferentes domínios.<br />•Banco de Dados: MongoDB para
-                  armazenamento de dados.<br />
-                  •Dependências: Gerenciadas via npm.<br /><br />
-                  Este projeto foi essencial para aplicar e aprimorar minhas
-                  habilidades técnicas em desenvolvimento full-stack. -->
                   </p>
                   <div class="aba-container-links">
                     <a class="aba-links aba-links-site" href="">Site</a>
@@ -297,16 +275,6 @@
                   <p>
                     Vai Corinthians é uma aplicação de cadastro de todos os
                     jogadores e jogadoras que passaram pelo Corinthians.<br /><br />
-
-                    <!-- O intuito desse projeto é desenvolver habilidades e técnicas
-                  no React.<br />
-
-                  •O uso de useState e useRef;<br />
-                  •Estruturando e organizando o projeto em Front-End e
-                  Back-End;<br />
-                  •Uso de JSON, Yarn e Git;<br />
-                  •Manipulação do DOM através do React.<br />
-                  •Criação de componentes. -->
                   </p>
                   <div class="aba-container-links">
                     <a class="aba-links aba-links-site" href="">Site</a>
@@ -326,21 +294,6 @@
                     frases que permite cadastrar, listar, editar, deletar,
                     filtrar e favoritar pensamentos, incluindo informações como
                     conteúdo, autoria e data.<br /><br />
-
-                    <!-- O foco principal do projeto foi a utilização de
-                  HTML5,JavaScript,CSS3, onde desenvolvi e apliquei diversas
-                  técnicas, incluindo:<br />
-
-                  •Uso de Regex<br />
-                  •Estilização em CSS3 e Flexbox;<br />
-                  •Requisições de API Rest local, utilizando fetch e axios para
-                  ver as diferenças no codigo.;<br />
-                  •Utilização de Git e Node para fazer o deploy no Vercel
-                  diretamente do terminal.<br />
-                  •Manipulação do DOM para interatividade.,<br /><br />
-
-                  PS: Por enquanto o projeto só irá funcionar quando o servidor
-                  estiver rodando. Logo será implementado a continuação dele.` -->
                   </p>
                   <div class="aba-container-links">
                     <a class="aba-links aba-links-site" href="">Site</a>
@@ -437,69 +390,69 @@
             <img src="/assets/LBC_Corretora.png" alt="" />
           </div>
         </div>
-
-        <div class="card" id="card3"></div>
       </div>
 
-      <div class="divisao-sobre-mim">
-        <div class="divisao-sobre-mim-linha"></div>
-        <h2>Um pouco mais...</h2>
-      </div>
+      <div class="sobre-mim-container">
+        <div class="divisao-sobre-mim">
+          <div></div>
+          <h2>Um pouco mais...</h2>
+        </div>
 
-      <div id="sobre-mim">
-        <p class="sobre-mim-descricao">
-          Sou de São Paulo, Brasil, e estou expandindo minha atuação em
-          Front-End e UX/UI. Estou sempre buscando novas formas de expressar
-          meus pensamentos e criar experiências através do design.<br /><br />
+        <div id="sobre-mim">
+          <p class="sobre-mim-descricao">
+            Sou de São Paulo, Brasil, e estou expandindo minha atuação em
+            Front-End e UX/UI. Estou sempre buscando novas formas de expressar
+            meus pensamentos e criar experiências através do design.<br /><br />
 
-          Antes de migrar para a área de tecnologia, trabalhei com Fotografia e
-          Produção Audiovisual. Foi em Londres, onde vivi por 5 anos, que
-          iniciei minha formação em Ciência da Computação. Escolhi Front-End
-          porque me sinto confortável na área e acredito que minha vivência
-          acadêmica e profissional pode agregar muito à experiência que venho
-          adquirindo.<br /><br />
+            Antes de migrar para a área de tecnologia, trabalhei com Fotografia
+            e Produção Audiovisual. Foi em Londres, onde vivi por 5 anos, que
+            iniciei minha formação em Ciência da Computação. Escolhi Front-End
+            porque me sinto confortável na área e acredito que minha vivência
+            acadêmica e profissional pode agregar muito à experiência que venho
+            adquirindo.<br /><br />
 
-          Fique à vontade para consultar meu CV abaixo e conhecer mais detalhes
-          sobre minha trajetória.
-        </p>
-        <div class="sobre-mim-background">
-          <img
-            class="background-preto"
-            src="assets/forma-preta.svg"
-            alt="background do texto"
-          />
+            Fique à vontade para consultar meu CV abaixo e conhecer mais
+            detalhes sobre minha trajetória.
+          </p>
+          <div class="sobre-mim-background">
+            <img
+              class="background-preto"
+              src="assets/forma-preta.svg"
+              alt="background do texto"
+            />
+          </div>
+          <div id="sobre-mim-linkedin">
+            <a
+              href="https://www.linkedin.com/in/thales-varga-11b83033a/"
+              target="_blank"
+              class="linkedin-link sobre-mim-link"
+            >
+              <img
+                src="assets/linkedin.svg"
+                alt="LinkedIn"
+                class="sobre-mim-icone-linkedin sobre-mim-link"
+              />
+              Vamos nos conectar
+            </a>
+
+            <div id="download-cv">
+              <a class="sobre-mim-download-cv sobre-mim-link">Download CV</a>
+            </div>
+          </div>
+
+          <div id="sobre-mim-2">
+            <div class="sobre-mim-2-background">
+              <img
+                class="background-cinza"
+                src="assets/forma-cinza.svg"
+                alt="background do texto"
+              />
+            </div>
+          </div>
         </div>
       </div>
-      <div id="sobre-mim-linkedin">
-        <a
-          href="https://www.linkedin.com/in/thales-varga-11b83033a/"
-          target="_blank"
-          class="linkedin-link"
-        >
-          <img
-            src="assets/linkedin.svg"
-            alt="LinkedIn"
-            class="sobre-mim-icone-linkedin"
-          />
-          Vamos nos conectar
-        </a>
 
-        <div id="download-cv">
-          <a class="sobre-mim-download-cv">Download CV</a>
-        </div>
-      </div>
-
-      <div id="sobre-mim-2">
-        <div class="sobre-mim-2-background">
-          <img
-            class="background-cinza"
-            src="assets/forma-cinza.svg"
-            alt="background do texto"
-          />
-        </div>
-      </div>
-
-      <div id="portfolio-fotografia">
+      <!-- <div id="portfolio-fotografia">
         <div class="portfolio-fotografia-imagem">
           <h3 class="portfolio-fotografia-titulo">Portfólio de Fotografia</h3>
           <img
@@ -507,7 +460,7 @@
             alt="imagem de um link de portfolio de fotografia"
           />
         </div>
-      </div>
+      </div> -->
     </main>
     <img
       src="/assets/forma-circulo.svg"
@@ -558,7 +511,7 @@
               alt="Instagram"
           /></a>
         </div>
-        <p>&copy; 2025 Thales Varga.</p>
+        <p>Copyright © 2025 Todos os direitos reservados.</p>
       </div>
     </footer>
   </body>
