retirada da entrada com fade out do projeto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="/landingpage.js" defer type="module"></script>
   </head>
   <body data-tema="claro">
-    <div id="entrada-site" class="oculto conteudo-entrada">
+    <!-- <div id="entrada-site" class="oculto conteudo-entrada">
       <h1>
         Thales Varga
         <img
@@ -28,7 +28,7 @@
         />
       </h1>
       <p>Portfólio</p>
-    </div>
+    </div> -->
 
     <img class="linha" src="/assets/Vector 1 (Stroke).svg" alt="Linha decorativa" />
     <header id="header">
