--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thales Varga</title>
     <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/entrada.css" />
+    <!-- <link rel="stylesheet" href="/css/entrada.css" /> -->
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/sobremim.css" />
     <link rel="stylesheet" href="/css/portfolioFotografia.css" />
