atualizacao do botao download e da section skills

--- a/lbcConsultoria.html
+++ b/lbcConsultoria.html
@@ -1,43 +1,185 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thales Varga</title>
-  </head>
-  <body>
-    <main>
-      <div class="introducao">
-        <img src="/assets/lbc-logo-branco.webp" alt="Logo LBC Consultoria" />
-        <p>
-          O site da LBC Corretora, foi o meu primeiro trabalho, e claramente o
-          site apresenta uma oportunidade de modernização e melhoria em termos
-          de experiência do usuário (UX/UI) e desenvolvimento
-          técnico (front-end e back-end). Abaixo, detalho uma estratégia
-          dividida em duas etapas principais:UX/UI e
-          Front-End/Back-End, além de um planejamento completo para a execução
-          do projeto.
-        </p>
-        <a href=""
-          >Imagem de Antes<img src="/assets/Lbc-pagina1.png" alt="Print do site antigo da LBC"
-        /></a>
-        <a href=""
-          ><img src="/assets/Lbc-pagina2.png" alt="Print do site antigo da LBC"
-        />Imagem de Antes</a>
-        <a href="https://lbccorretora.com.br/">Site</a>
-      </div>
-
-      <div class="plano">
-        <h2>Estratégia</h2>
-        <p>Dividi em duas etapas:</p>
-        <div>
-       <h3>Experiência do Usuário</h3>
-            <p></p>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Plano de UX/UI - LBC Corretora</title>
+    <style>
+        /* Estilos baseados no Manual de Identidade Visual */
+        body {
+            font-family: 'Open Sans', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #192050;
+            background-color: #ffffff;
+            line-height: 1.6;
+        }
+        header {
+            background-color: #0E2C72;
+            color: #ffffff;
+            padding: 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2rem;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        section {
+            margin-bottom: 40px;
+        }
+        h2 {
+            color: #0E2C72;
+            font-size: 1.8rem;
+            margin-bottom: 15px;
+        }
+        p {
+            font-size: 1rem;
+            margin-bottom: 10px;
+        }
+        .cta-button {
+            display: inline-block;
+            background-color: #F15A24;
+            color: #ffffff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+        .cta-button:hover {
+            background-color: #C4FBB7;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        table th, table td {
+            border: 1px solid #6D6D6D;
+            padding: 10px;
+            text-align: left;
+        }
+        footer {
+            background-color: #192050;
+            color: #ffffff;
+            text-align: center;
+            padding: 10px;
+            margin-top: 40px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Plano de UX/UI para o Site da LBC Corretora</h1>
+    </header>
+    <div class="container">
+        <section>
+            <h2>Introdução</h2>
+            <p>Este plano foi desenvolvido exclusivamente para apresentação ao cliente, com foco em explicar de forma clara e detalhada as decisões estratégicas que guiarão o redesenho do site da LBC Corretora de Planos de Saúde.</p>
+        </section>
+        <section>
+            <h2>Objetivos do Projeto</h2>
             <ul>
-                <li></li>
+                <li><strong>Captação de Leads:</strong> Incentivar os visitantes a preencher formulários e fornecer informações relevantes.</li>
+                <li><strong>Alinhamento com a Identidade Visual:</strong> Aplicação rigorosa das cores, tipografia e elementos gráficos conforme o manual de identidade visual.</li>
+                <li><strong>Experiência Simplificada:</strong> Um fluxo de navegação intuitivo, com foco na conversão e facilidade de uso.</li>
+                <li><strong>Mobile-First Design:</strong> Garantia de que o site seja totalmente responsivo e otimizado para dispositivos móveis.</li>
+                <li><strong>SEO Básico:</strong> Implementação de práticas de otimização para motores de busca.</li>
             </ul>
-        </div>
-      </div>
-    </main>
-  </body>
+        </section>
+        <section>
+            <h2>Estratégias de UX/UI Detalhadas</h2>
+            <p><strong>Lei de Hick-Hyman:</strong> Redução de escolhas no menu principal e CTAs claros.</p>
+            <p><strong>Lei de Fitts:</strong> Botões grandes e próximos do cursor para facilitar cliques.</p>
+            <p><strong>Princípio de Gestalt:</strong> Agrupamento visual de informações relacionadas.</p>
+            <p><strong>Lei de Jakob Nielsen:</strong> Padrões de usabilidade conhecidos, como posicionamento de logo e formulários lógicos.</p>
+        </section>
+        <section>
+            <h2>Cronograma de Implementação</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Fase</th>
+                        <th>Descrição</th>
+                        <th>Prazo Estimado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Pesquisa e Planejamento</td>
+                        <td>Análise detalhada do público-alvo e definição de requisitos.</td>
+                        <td>2 semanas</td>
+                    </tr>
+                    <tr>
+                        <td>Wireframes e Protótipos</td>
+                        <td>Criação de esboços iniciais e protótipos navegáveis.</td>
+                        <td>3 semanas</td>
+                    </tr>
+                    <tr>
+                        <td>Design Final</td>
+                        <td>Desenvolvimento do design visual final.</td>
+                        <td>4 semanas</td>
+                    </tr>
+                    <tr>
+                        <td>Desenvolvimento</td>
+                        <td>Codificação do site com foco em performance.</td>
+                        <td>5 semanas</td>
+                    </tr>
+                    <tr>
+                        <td>Testes e Ajustes</td>
+                        <td>Testes de usabilidade e compatibilidade.</td>
+                        <td>2 semanas</td>
+                    </tr>
+                    <tr>
+                        <td>Lançamento</td>
+                        <td>Publicação do novo site.</td>
+                        <td>1 semana</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2>Orçamento Estimado</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Etapa</th>
+                        <th>Valor Estimado (R$)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Pesquisa, Planejamento e Wireframes</td>
+                        <td>R$ 5.000,00</td>
+                    </tr>
+                    <tr>
+                        <td>Design UI e Prototipagem</td>
+                        <td>R$ 8.000,00</td>
+                    </tr>
+                    <tr>
+                        <td>Desenvolvimento e Testes</td>
+                        <td>R$ 12.000,00</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Total</strong></td>
+                        <td><strong>R$ 25.000,00</strong></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2>Conclusão</h2>
+            <p>Este plano detalha todas as estratégias de UX/UI que serão implementadas no site da LBC Corretora de Planos de Saúde, com foco na captação eficiente de leads e na criação de uma experiência de usuário fluida e envolvente.</p>
+            <a href="#" class="cta-button">Entre em Contato Agora</a>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2023 LBC Corretora. Todos os direitos reservados.</p>
+    </footer>
+</body>
 </html>
