adicionando target blank em alguns links

--- a/doorDigital.html
+++ b/doorDigital.html
@@ -23,7 +23,7 @@
         <div class="header-menu">
           <ul>
             <a href="/index.html" class="home" ><li >Home</li></a>
-           <a href="assets/CV_Thales_Varga_Front-End.pdf" target="_blank"  rel="noopener noreferrer"></a><li>Download CV</li></a>
+           <a href="assets/CV_Thales_Varga_Front-End.pdf" target="_blank" rel="noopener noreferrer"></a><li>Download CV</li></a>
           </ul>
         </div>
         <div class="header-contato">
@@ -32,7 +32,7 @@
             <span></span>
             <span></span>
           </div>
-          <a href="https://wa.me/5511967393632" target="_blank" rel="noreferer noopener">
+          <a href="https://wa.me/5511967393632" target="_blank" rel="noopener noreferrer">
             <img src="/assets/whatsapp.svg" alt="whatsapp" />
           </a>
         </div>
@@ -108,7 +108,7 @@
         <h2>
           <a
             href="https://wa.me/5511967393632"
-            target="_blank" rel="noreferer noopener"
+            target="_blank" rel="noopener noreferrer"
             style="text-decoration: none; color: white"
             ><img
               class="footer-whats"
@@ -120,18 +120,18 @@
         </h2>
       </div>
       <div class="redes-sociais">
-        <a href="https://github.com/thalesvarga" target="_blank" rel="noreferer noopener"
+        <a href="https://github.com/thalesvarga" target="_blank" rel="noopener noreferrer"
           ><img class="contato-icone" src="/assets/github.svg" alt="Github"
         /></a>
         <a
           href="https://www.linkedin.com/in/thales-varga-11b83033a/"
-          target="_blank" rel="noreferer noopener"
+          target="_blank" rel="noopener noreferrer"
           ><img
             class="contato-icone"
             src="/assets/linkedin.svg"
             alt="Linkedin"
         /></a>
-        <a href="https://www.instagram.com/thalesvarga/" target="_blank" rel="noreferer noopener"
+        <a href="https://www.instagram.com/thalesvarga/" target="_blank" rel="noopener noreferrer"
           ><img
             class="contato-icone"
             src="/assets/instagram.svg"
