--- a/index.html
+++ b/index.html
@@ -41,16 +41,6 @@
           <li data-section="contato">Contato</li>
         </ul>
       </div>
-      <!-- <div class="header-contato">
-        <div class="header-hamburguer">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <a href="https://wa.me/5511967393632" target="_blank">
-          <img src="/assets/whatsapp.svg" alt="whatsapp" />
-        </a>
-      </div> -->
     </header>
 
     <main>
@@ -103,7 +93,7 @@
         <div class="download-cv">
           <a
             href="/assets/CV_Thales_Varga_Front-End.pdf "
-            class="sobre-mim-download-cv sobre-mim-link"
+            class="sobre-mim-download-cv sobre-mim-link" target="_blank" rel="noopener noreferrer"
             >Download CV</a
           >
         </div>
@@ -214,8 +204,7 @@
           <a
             href="assets/CV_Thales_Varga_Front-End.pdf"
             target="_blank"
-            rel="”noopener"
-            noreferer”
+            rel="noopener noreferrer"
             >download CV</a
           >
         </div>
@@ -232,24 +221,23 @@
           <div class="contato-links">
             <a
               href="https://www.linkedin.com/in/thales-varga-11b83033a/"
-              rel="noreferer noopener"
+              rel="noopener noreferrer"
               >Linke<strong class="contato-strong">din</strong></a
             >
-            <a href="https://github.com/thalesvarga" rel="noreferer noopener">
+            <a href="https://github.com/thalesvarga" rel="noopener noreferrer">
               Gi<strong class="contato-strong">th</strong>ub</a
             >
             <a
               href="https://www.instagram.com/thalesvarga"
-              rel="noreferer noopener"
+              rel="noopener noreferrer"
               >ins<strong class="contato-strong">tagram</strong></a
             >
             <a
               href="https://www.instagram.com/thalesvarga"
-              rel="noreferer noopener"
+              rel="noopener noreferrer"
               >email</a
             >
-            <a href="https://wa.me/5511967393632" rel="noreferer noopener"
-              >whats</a
+            <a href="https://wa.me/5511967393632" rel="noopener noreferrer"
             >
           </div>
           <div class="contato-descricao">
